<resources>
    <string name="app_name">Currency Calculator</string>
    <string name="cost_of_service">Введите число</string>
    <string name="calculate">Посчитать</string>
    <string name="result">Результат: </string>
    <string name="refresh_button">Обновить курсы валют</string>
    <string name="current_eur">Текущая цена EUR:</string>
    <string name="current_usd">Текущая цена USD:</string>
    <string-array name="options">
        <item>RUB-USD</item>
        <item>RUB-EUR</item>
        <item>USD-RUB</item>
        <item>EUR-RUB</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>